# opsramp-mcp

./: .gitignore  README.md  REPORT.md  config.example.toml  pyproject.toml
docs/: DESIGN.md  MCP_TUTORIAL.md
scripts/: _smoke_perf_agg.py  dashboard_data_test.py  dashboard_tiles_smart_smoke.py  promql_smoke.py  query_benchmark.py  query_once.py  show_dashboard_variables.py  smoke_test.py  test_aggregator_plan.py
src/opsramp_mcp/: __init__.py  client.py  config.py  formatters.py  server.py
tests/: test_client_error_handling.py  test_formatters.py  test_server_utils.py  test_tool_registration.py
